# syncmaster

./: .dockerignore  .env.dev  .env.docker  .env.docker.test  .env.github  .env.local  .env.local.test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .spdx-license-header.txt  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.rst  SECURITY.rst  combine_coverage.sh  config.docker.yml  config.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest_runner.sh
syncmaster/: __init__.py  alembic.ini  config.py  pyproject.toml  utils.py
syncmaster/app/: config.py  handler.py  main.py  pre_start.py
syncmaster/app/api/: deps.py  monitoring.py  router.py  services.py
syncmaster/app/api/services/: __init__.py  auth.py
syncmaster/app/api/v1/: router.py  schemas.py
syncmaster/app/celery/: base.py  config.py  controller.py  tasks.py
syncmaster/app/celery/handlers/: base.py  oracle.py  postgres.py
syncmaster/app/db/: base.py  factory.py  mixins.py  models.py  provider.py  utils.py
syncmaster/app/db/migrations/: env.py
syncmaster/app/db/repositories/: base.py  connection.py  credentials_repository.py  group.py  queue.py  repository_with_owner.py  run.py  transfer.py  user.py  utilites.py  utils.py
syncmaster/app/dto/: connections.py  transfers.py
syncmaster/app/exceptions/: __init__.py  acl.py  base.py  connection.py  credentials.py  group.py  queue.py  run.py  transfer.py  user.py
syncmaster/app/services/: __init__.py  auth.py  unit_of_work.py
syncmaster/app/tasks/: base.py  config.py  controller.py  transfer.py  utils.py
syncmaster/app/tasks/handlers/: base.py  hive.py  oracle.py  postgres.py
syncmaster/backend/: __init__.py  __main__.py  celery.py  config.py  export_openapi_schema.py  handler.py  main.py  pre_start.py
syncmaster/backend/api/: deps.py  monitoring.py  router.py
syncmaster/backend/api/v1/: auth.py  connections.py  groups.py  queue.py  router.py  runs.py  transfers.py  users.py
syncmaster/backend/dependencies/: __init__.py  get_access_token.py  stub.py
syncmaster/backend/middlewares/: __init__.py  cors.py  openapi.py  request_id.py  session.py  static_files.py
syncmaster/backend/middlewares/monitoring/: __init__.py  metrics.py
syncmaster/backend/providers/auth/: __init__.py  base.py  base_provider.py  dummy.py  dummy_provider.py  keycloak.py  keycloak_provider.py
syncmaster/backend/scripts/: export_openapi_schema.py  manage_superusers.py
syncmaster/backend/services/: __init__.py  auth.py  get_user.py  unit_of_work.py
syncmaster/backend/settings/: __init__.py
syncmaster/backend/settings/auth/: __init__.py  dummy.py  jwt.py  keycloak.py
syncmaster/backend/settings/server/: __init__.py  monitoring.py  request_id.py  static_files.py
syncmaster/backend/utils/: jwt.py  slug.py  state.py
syncmaster/backend/worker/: base.py  config.py  controller.py  transfer.py  utils.py
syncmaster/backend/worker/handlers/: base.py  hive.py  oracle.py  postgres.py
syncmaster/config/: ivysettings.xml
syncmaster/db/: __init__.py  alembic.ini  base.py  factory.py  mixins.py  models.py  utils.py
syncmaster/db/migrations/: __init__.py  __main__.py  alembic.ini  env.py
syncmaster/db/migrations/versions/: 2023-11-23_0000_alter_alembic_version.py  2023-11-23_0001_create_user_table.py  (+20 more)
syncmaster/db/mixins/: __init__.py  deletable.py  resource.py  timestamp.py
syncmaster/db/models/: __init__.py  apscheduler_job.py  auth_data.py  base.py  connection.py  enums.py  group.py  queue.py  run.py  transfer.py  user.py
syncmaster/db/repositories/: __init__.py  base.py  connection.py  credentials_repository.py  group.py  queue.py  repository_with_owner.py  run.py  search.py  transfer.py  user.py  utils.py
syncmaster/dto/: connections.py  runs.py  transfers.py  transfers_resources.py  transfers_strategy.py
syncmaster/errors/: __init__.py  base.py  registration.py
syncmaster/errors/schemas/: __init__.py  bad_request.py  invalid_request.py  not_authorized.py
syncmaster/exceptions/: __init__.py  auth.py  base.py  connection.py  credentials.py  group.py  queue.py  redirect.py  run.py  transfer.py  user.py
syncmaster/scheduler/: __init__.py  __main__.py  celery.py  logging.py  transfer_fetcher.py  transfer_job_manager.py  utils.py
syncmaster/scheduler/settings/: __init__.py
syncmaster/schemas/: __init__.py  ping.py
syncmaster/schemas/v1/: __init__.py  auth.py  connection_types.py  file_formats.py  groups.py  page.py  page_schema.py  queue.py  schemas.py  status.py  transfer_types.py  transformation_types.py  types.py  users.py
syncmaster/server/: __init__.py  __main__.py  handler.py
syncmaster/server/api/: monitoring.py  router.py
syncmaster/server/dependencies/: __init__.py  get_access_token.py
syncmaster/server/middlewares/: __init__.py  cors.py  openapi.py  request_id.py  session.py  static_files.py
syncmaster/server/providers/: __init__.py
syncmaster/server/scripts/: export_openapi_schema.py  manage_superusers.py
syncmaster/server/services/: get_user.py  unit_of_work.py
syncmaster/server/settings/: __init__.py
syncmaster/server/utils/: jwt.py  slug.py  state.py
syncmaster/settings/: __init__.py  base.py  broker.py  credentials.py  database.py  logging.py
syncmaster/settings/auth/: __init__.py  dummy.py  keycloak.py
syncmaster/settings/log/: __init__.py  colored.yml  json.yml  plain.yml
syncmaster/settings/server/: __init__.py  cors.py  openapi.py
syncmaster/settings/worker/: __init__.py
syncmaster/tests/: conftest.py  utils.py
syncmaster/tests/config/: .coveragerc
syncmaster/tests/factories/: base.py
syncmaster/tests/spark/: get_worker_spark_session.py
syncmaster/tests/test_database/: test_migrationsup_to_date.py
syncmaster/tests/test_unit/: conftest.py  test_ping.py  test_users.py  utils.py
syncmaster/worker/: __init__.py  base.py  celery.py  config.py  controller.py  ivy2.py  spark.py  transfer.py  utils.py
syncmaster/worker/handlers/: base.py  hive.py  oracle.py  postgres.py
syncmaster/worker/settings/: __init__.py  hwm_store.py
(+824 files in other folders)
