[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
version_file = "syncmaster/VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.dev{env:GITHUB_RUN_ID:{ccount}}+git.{sha}"
dirty_template = "{tag}.dev{env:GITHUB_RUN_ID:{ccount}}+git.{sha}.dirty"

[project]
name = "syncmaster"
license = "Apache-2.0"
description = "Syncmaster REST API + scheduler + Worker"
authors = [{name= "MWS Data Bridge", email = "onetools@mts.ru"}]
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["Syncmaster", "REST", "API", "Worker", "Spark", "Transfer", "ETL"]
requires-python = ">=3.11"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "pydantic-settings-logging~=0.1.1",
    "sqlalchemy~=2.0.44",
    "sqlalchemy-utils~=0.42.0",
    "pyyaml~=6.0.3",
    "coloredlogs~=15.0.1",
    "python-json-logger~=4.0.0",
    "asgi-correlation-id~=4.3.4",
    "uuid6~=2025.0.1",
    "celery~=5.6.0",
    "psycopg2-binary~=2.9.11",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["syncmaster*"]
exclude = ["docs", "tests"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yml",  "*.ini", "VERSION"]

[project.urls]  # Optional
"Homepage" = "https://github.com/MobileTeleSystems/syncmaster"
"Documentation" = "https://syncmaster.readthedocs.io/"
"Source" = "https://github.com/MobileTeleSystems/syncmaster"
"CI/CD" = "https://github.com/MobileTeleSystems/syncmaster/actions"
"Tracker" = "https://github.com/MobileTeleSystems/syncmaster/issues"


[project.optional-dependencies]
server = [
    "fastapi~=0.127.0",
    "starlette-exporter~=0.23.0",
    "python-multipart~=0.0.21",
    "uvicorn~=0.40.0",
    "alembic~=1.17.1",
    "pyjwt~=2.10.1",
    "asyncpg~=0.31",
    "python-keycloak~=5.8.1",
    "itsdangerous~=2.2.0",
]
scheduler = [
    "asyncpg~=0.31",
    "apscheduler~=3.11.1",
]
worker = [
    "onetl[files]~=0.15.0",
    "pyspark<4.0.0",
    "horizon-hwm-store~=1.1.4",
    "jinja2~=3.1.6",
]
kerberos = [
    "onetl[kerberos]~=0.15.0",
]

[dependency-groups]
test = [
    "pytest~=8.4.2",
    "httpx~=0.28.1",
    "pytest-asyncio>=0.26.0,<1.0",
    "pytest-randomly~=4.0.1",
    "pytest-rerunfailures~=16.1",
    "pytest-deadfixtures~=3.0.0",
    "pytest-mock~=3.15.1",
    "pytest-lazy-fixtures~=1.4.0",
    "faker~=39.0",
    "coverage~=7.13.0",
    "gevent~=25.9.1",
    "respx~=0.22.0",
    "dirty-equals~=0.11.0",
]
dev = [
    "mypy~=1.19.1",
    "pre-commit~=4.5.0",
    "sqlalchemy[mypy]~=2.0.44",
    "types-jwcrypto~=1.5.0",
]
docs = [
  "setuptools-git-versioning~=2.1.0",
  "autodoc-pydantic~=2.2.0",
  "numpydoc~=1.10.0",
  "sphinx~=8.2.3",
  "furo~=2025.12.19",
  "sphinx-copybutton~=0.5.2",
  "sphinxcontrib-towncrier~=0.5.0a0",
  "towncrier~=25.8.0",
  "sphinx-issues~=5.0.1",
  "sphinx-design~=0.6.1",
  "sphinx-favicon~=1.0.1",
  "sphinx-argparse~=0.5.2",
  # https://github.com/mgeier/sphinx-last-updated-by-git/pull/77
  "sphinx-last-updated-by-git~=0.3.8",
  # uncomment after https://github.com/zqmillet/sphinx-plantuml/pull/4
  # sphinx-plantuml~=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["docs/", "Makefile"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ARG", "ANN", "A002", "COM812", "D", "TD", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"syncmaster/db/migrations/versions/2025-08-10_0012_update_ts.py" = ["E501"]
"syncmaster/db/migrations/*" = ["N999"]
"syncmaster/db/models/*" = ["TC"]
"syncmaster/db/repositories/*" = ["TC", "PLR0913"]
"syncmaster/schemas/*" = ["TC"]

"tests/*" = [
    "S",
    "A",
    "E501",
    "FBT001",
    "FBT002",
    "PLR2004",
    "PLR0913",
    "SLF001",
    "FIX002",
    "PERF401",
    "RET504",
    "PLC0415",
    "C408",
]
"tests/resources/file_df_connection/test_data.py" = ["RUF001"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "keycloak.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "avro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kombu.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onetl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "server: tests for server (require running database)",
    "scheduler: tests for scheduler (require running database)",
    "worker: tests for syncmaster worker",
    "hive: tests for Hive",
    "postgres: tests on Postgres",
    "oracle: tests for Oracle",
    "clickhouse: tests for Clickhouse",
    "mysql: tests for MySQL",
    "mssql: tests for MSSQL",
    "hdfs: tests for hadoop hdfs",
    "s3: tests for S3",
    "ftp: tests for FTP",
    "ftps: tests for FTPS",
    "sftp: tests for SFTP",
    "samba: tests for Samba",
    "webdav: tests for WebDAV",
]

[tool.coverage.paths]
source = ["syncmaster"]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
concurrency = ["gevent", "multiprocessing"]
omit = [
  "tests/*",
]
data_file = "reports/.coverage"

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if .*debug:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if log.isEnabledFor(logging.DEBUG):",
  "if sys.version_info",
  "@(abc\\.)?abstractmethod",
  "\\.\\.\\.",
  "def downgrade\\(\\)",
]

[tool.towncrier]
name = "Syncmaster"
package = "syncmaster"
filename = "docs/changelog/NEXT_RELEASE.rst"
directory = "docs/changelog/next_release/"
title_format = "{version} ({project_date})"
issue_format = ":issue:`{issue}`"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "significant"
name = "Significant Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "improvement"
name = "Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "dependency"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Doc only Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removal"
showcontent = true
