[tool.poetry]
name = "syncmaster"
version = "0.1.0"
description = ""
authors = ["DataOps.ETL <onetools@mts.ru>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
sqlalchemy = "^2.0.18"
uvicorn = "^0.22.0"
pydantic = "^1.10.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.6"
pytest-randomly = "^3.13.0"
pytest-deadfixtures = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
platformdirs = "3.8.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
types-python-jose = "^3.3.4.7"


[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.services.mts.ru/repository/pip/simple"
priority = "primary"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.mts.ru/artifactory/api/pypi/pip-bigdata/simple/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "311"
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true
